tests/functional/data/transpiler/common/errors/exclusive/inside_inner_2.err
inside_inner_2.cpp:4:9: error: Cannot define [@exclusive] variables inside an [@inner] loop
    4 |         @exclusive int k;
      |         ^
